[package]
name = "qtools"
version = "0.1.0"
edition = "2021"

[dependencies]
threadpool = "1.8.1"
clap = { version = "4.1.13",  features = ["derive"] }
viuer = { version = "0.11", default-features = false, features = ["icy_sixel"] }
image = { version = "0.25", default-features = false }
libc = "0.2"

[lib]
name = "qtools"
path = "src/rust/lib.rs"

[[bin]]
name = "dq"
path = "src/rust/bin/dq.rs"

[[bin]]
name = "pq"
path = "src/rust/bin/pq.rs"

